# telegraf-execd-pg-custom

./: .gitignore  LICENSE  PostgreSQL Overview-1615476473641.json  README.md  postgresql_custom_data.conf  postgresql_query.py  setup.cfg  setup.py
queries/: backends.sql  db_stats.sql  index_stats.sql  locks_mode.sql  table_stats.sql
telegraf_execd_pg_custom/: postgresql_query.py
