[metadata]
name = telegraf-execd-pg-custom
version = 2.0
description = PostgreSQL Custom Input Plugin for Telegraf
long_description = file: README.md
long_description_content_type = text/markdown
author = Srijan Choudhary
provides =
    telegraf_execd_pg_custom
license = MIT
url = https://github.com/srijan/telegraf-execd-pg-custom
project_urls =
    Bug Tracker = https://github.com/srijan/telegraf-execd-pg-custom/issues

# For a list of classifiers see https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring
    Topic :: System :: Systems Administration

[options]
packages = find:
include_package_data = True
install_requires =
    psycopg2-binary
    pytoml
    pytz
    python-dateutil
    six

[options.entry_points]
console_scripts =
    postgresql-query=telegraf_execd_pg_custom.postgresql_query:main
